crates/contextdb-core/tests/fixtures/compile_fail/assign_u64_to_wallclock.rs
use contextdb_core::Wallclock;

fn main() {
    let x: u64 = 42;
    let _w: Wallclock = x;
}
